# tudo

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  tudo-demo.mov
.github/: funding.yml
.github/workflows/: release.yml
examples/: preview.rs  seed.rs
packaging/: README.md
packaging/aur/tudo/: .SRCINFO  PKGBUILD
packaging/aur/tudo-bin/: .SRCINFO  PKGBUILD
src/: app.rs  clipboard.rs  config.rs  event.rs  keybind.rs  lib.rs  main.rs  model.rs  storage.rs  theme.rs  ui.rs
tests/: app.rs  config.rs  render.rs  storage.rs
